--- a/style.css
+++ b/style.css
@@ -139,14 +139,17 @@ input {
 
 a:link {
     text-decoration: none;
+    color: inherit;
 }
 
 a:visited {
     text-decoration: none;
+    color: inherit;
 }
 
 a:hover {
     text-decoration: none;
+    color: inherit;
 }
 
 a:active {
