--- a/style.css
+++ b/style.css
@@ -566,6 +566,17 @@ a:active {
     opacity: 0.5;
 }
 
+.load_fading {
+	position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    background-color: black;
+    opacity: 0.5;
+    z-index: 100;
+}
+
 img#message_logo {
     position: relative;
     left: -160px;
