--- a/style.css
+++ b/style.css
@@ -576,6 +576,13 @@ a:active {
     opacity: 0.5;
     z-index: 100;
 }
+.load_fading img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -5%;
+    margin-top: -5%;
+}
 
 img#message_logo {
     position: relative;
