--- a/style.css
+++ b/style.css
@@ -572,7 +572,7 @@ a:active {
     height: 100%;
     left: 0px;
     top: 0px;
-    background: #000 url('images/loading.gif') no-repeat center center;
+    background: #000;
     z-index: 100;
     overflow: visible;
 }
