--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@
 		top: -3px;
 		left: 125px;
 	}
+	#left_button4 {
+		top: -3px;
+		left: 163px;
+	}
 	.main_table {
 		width: 100%;
 	}
@@ -113,6 +117,10 @@
 	}
 	#left_button3 {
 		top: 125px;
+		left: -3px;
+	}
+	#left_button4 {
+		top: 172px;
 		left: -3px;
 	}
 	#back_button {
