--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ a:active {
   	background-color: lightgray;
 }
 
-.left_button {
+#left_button {
 	position: fixed;
 	width: 40px;
  	height: 40px;
