--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,15 @@
 	  	padding-left: 1px !important;
 	    padding-right: 1px !important;
 	}
+
+	div#loader {
+		position: absolute;
+		left: 60%;
+		top: 0px;
+	    z-index: 1;
+	    height: 20px;
+	    width: 20px;
+	}
 	div#logo {
 		position: fixed;
 		left: 40%;
