--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,10 @@
 	    height: 20px;
 	    width: 20px;
 	}
+	div#loader img {
+	    height: 100%;
+	    width: 100%;
+	}
 	div#logo {
 		position: fixed;
 		left: 40%;
