--- a/css/style.css
+++ b/css/style.css
@@ -645,3 +645,21 @@ img#message_logo {
     top: 90px;
     z-index: 1;
 }
+
+.wheel {
+    animation-name: spin;
+    animation-duration: 600ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+ 
+    z-index: 100;
+}
+ 
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
