--- a/css/style.css
+++ b/css/style.css
@@ -510,6 +510,25 @@ a:active {
 	top: 1px;
 }
 
+.uid {
+
+}
+.login {
+
+}
+.email {
+
+}
+.role {
+
+}
+.approvied {
+
+}
+.delete {
+
+}
+
 .messagebox {
 	display: none;
     position: absolute;
