--- a/css/style.css
+++ b/css/style.css
@@ -395,12 +395,18 @@ a:active {
     padding-right: 5px;
 	color: black;
 }
+.serv input {
+    width: 100%;
+}
 
 .role {
 	width: 46px;
 	padding-left: 5px;
     padding-right: 5px;
 	color: black;
+}
+.role input {
+    width: 100%;
 }
 
 .ipaddr {
