--- a/css/style.css
+++ b/css/style.css
@@ -705,3 +705,8 @@ img#message_logo {
         transform:rotate(360deg);
     }
 }
+
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+	background: inherit !important;
+	color: inherit !important;
+}
