--- a/css/style.css
+++ b/css/style.css
@@ -723,6 +723,7 @@ img#message_logo {
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
 	border: 1px solid darkgray !important;
 	background: darkgray !important;
+	color: inherit !important;
 }
 
 .ui-widget-header {
