--- a/css/style.css
+++ b/css/style.css
@@ -304,6 +304,7 @@ a:active {
 	-webkit-border-vertical-spacing: 2px;
 	background-color: rgb(211, 211, 211);
 	color: black;
+	font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
 	border-collapse: collapse;
 	line-height: 1.3;
 	margin-left: auto;
