--- a/css/style.css
+++ b/css/style.css
@@ -707,38 +707,21 @@ img#message_logo {
     }
 }
 
-.ui-state-default, 
-.ui-widget-content 
-.ui-state-default, 
-.ui-widget-header 
-.ui-state-default {
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
 	background: inherit !important;
 	color: inherit !important;
 	border: 1px !important;
 	font-weight: inherit !important;
 }
 
-.ui-state-active, 
-.ui-widget-content 
-.ui-state-active, 
-.ui-widget-header 
-.ui-state-active {
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
 	background-color: darkgray !important;
 	color: inherit !important;
 	border: inherit !important;
 	font-weight: inherit;
 }
 
-.ui-state-hover, 
-.ui-widget-content 
-.ui-state-hover, 
-.ui-widget-header 
-.ui-state-hover, 
-.ui-state-focus, 
-.ui-widget-content 
-.ui-state-focus, 
-.ui-widget-header 
-.ui-state-focus {
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
 	border: 1px solid darkgray !important;
 	background: darkgray !important;
 	color: inherit !important;
@@ -750,14 +733,4 @@ img#message_logo {
 }
 .ui-widget-content {
 	border: 1px solid rgb(128, 128, 128) !important;
-}
-
-.ui-state-hover,
-.ui-widget-content .ui-state-hover,
-.ui-widget-header .ui-state-hover,
-.ui-state-focus,
-.ui-widget-content .ui-state-focus,
-.ui-widget-header .ui-state-focus {
-	border: 1px solid #cccccc;
-	background: inherit;
 }
