--- a/css/style.css
+++ b/css/style.css
@@ -757,6 +757,6 @@ img#message_logo {
 .ui-state-focus,
 .ui-widget-content .ui-state-focus,
 .ui-widget-header .ui-state-focus {
-	border: 1px solid #cccccc !important;
+	border: 0px !important;
 	background: inherit !important;
 }
