--- a/css/style.css
+++ b/css/style.css
@@ -748,15 +748,19 @@ img#message_logo {
     background: darkgray !important;
 }
 .ui-widget-content {
-	border: 1px solid rgb(128, 128, 128) !important;
+	border: 0px solid rgb(128, 128, 128) !important;
 }
 
 .ui-state-hover,
-.ui-widget-content .ui-state-hover,
-.ui-widget-header .ui-state-hover,
+.ui-widget-content 
+.ui-state-hover,
+.ui-widget-header 
+.ui-state-hover,
 .ui-state-focus,
-.ui-widget-content .ui-state-focus,
-.ui-widget-header .ui-state-focus {
+.ui-widget-content 
+.ui-state-focus,
+.ui-widget-header 
+.ui-state-focus {
 	border: 0px !important;
 	background: inherit !important;
 }
