--- a/css/style.css
+++ b/css/style.css
@@ -763,3 +763,7 @@ img#message_logo {
 .ui-widget {
 	font-size: 1m;
 }
+
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+  background-color: darkgray;
+}
