--- a/css/style.css
+++ b/css/style.css
@@ -317,6 +317,10 @@ a:active {
   	background-color: rgb(211, 211, 211) !important;
 }
 
+.main_table tr:first-child th {
+    padding-left: 5px;
+}
+
 .main_table a {
 	color: black;
 }
@@ -469,47 +473,14 @@ a:active {
 }
 
 .colons {
-	position: absolute;
+	position: relative;
 	background-color: rgba(249, 249, 249, 0);
 	color: red;
-	top: -3px;
+	width: 2%;
+	height: 0px;
+    left: -10px;
+    top: -20px;
 	display: none;
-}
-
-#col1 {
-	width: 2%;
-	top: 1px;
-}
-
-#col2 {
-
-	width: 2%;
-	top: 1px;
-}
-
-#col3 {
-	width: 2%;
-	top: 1px;
-}
-
-#col4 {
-	width: 2%;
-	top: 1px;
-}
-
-#col5 {
-	width: 2%;
-	top: 1px;
-}
-
-#col6 {
-	width: 2%;
-	top: 1px;
-}
-
-#col7 {
-	width: 2%;
-	top: 1px;
 }
 
 .uid {
