--- a/css/style.css
+++ b/css/style.css
@@ -149,9 +149,14 @@
 	#left_button3 {
 		top: 135px;
 		left: -3px;
+		font-size: 18px;
 	}
-	#left_button4 {
+	#left_button13 {
 		top: 182px;
+		left: -3px;
+	}
+	#left_button14 {
+		top: 229px;
 		left: -3px;
 	}
 	#back_button {
