--- a/css/style.css
+++ b/css/style.css
@@ -50,9 +50,13 @@
 		top: -3px;
 		left: 135px;
 	}
-	#left_button4 {
+	#left_button13 {
 		top: -3px;
 		left: 182px;
+	}
+	#left_button14 {
+		top: -3px;
+		left: 229px;
 	}
 	#back_button {
 		top: -3px;
