--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -1,6 +1,6 @@
 .wrapper-dropdown-4 {
 	position: relative;
-	width: 270px;
+	width: 90%;
 	margin: 0 auto;
 	padding: 10px 10px 10px 30px;
 	background: #fff;
