--- a/css/style.css
+++ b/css/style.css
@@ -770,6 +770,11 @@ img#message_logo {
 				 red 0px -1px,
 				 red 1px -1px;
 }
+
 .margin1 {
     margin: 1px;
+}
+
+.menuitem {
+    padding: 5px;
 }
