--- a/css/style.css
+++ b/css/style.css
@@ -806,9 +806,14 @@ img#message_logo {
 .ban_comment {
     position: absolute;
     width: 200px;
-    left: 250px;
+    left: 240px;
 }
-
 .ban_input {
+    position: relative;
     background-color: white;
+}
+.ban_button {
+    position: relative;
+    left: 20px;
+    top: 20px;
 }
