--- a/css/style.css
+++ b/css/style.css
@@ -806,7 +806,7 @@ img#message_logo {
 .ban_comment {
     position: absolute;
     width: 200px;
-    left: 240px;
+    left: 245px;
 }
 .ban_input {
     position: relative;
@@ -819,4 +819,6 @@ img#message_logo {
     position: relative;
     left: 67px;
     top: -42px;
+    border: solid 1px darkgray;
+    height: 10px;
 }
