--- a/css/style.css
+++ b/css/style.css
@@ -785,8 +785,8 @@ img#message_logo {
 
 .ban_comment {
     position: absolute;
-    width: 200px;
-    left: 256px;
+    width: 140px;
+    left: 256px !important;
     display: inline-block;
 }
 .ban_input {
