--- a/css/style.css
+++ b/css/style.css
@@ -394,6 +394,12 @@ a:active {
 	color: black;
 }
 
+.remove {
+	padding-left: 5px;
+    padding-right: 5px;
+	color: black;
+}
+
 .serv {
 	width: 100px;
 	padding-left: 5px;
