--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,11 @@
 	}
 	#left_button3 {
 		top: -3px;
-		left: 135px;
+		left: 136px;
+	}
+	#left_button4 {
+		top: -3px;
+		left: 184px;
 	}
 	#left_button13 {
 		top: -3px;
