--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,11 @@
 		left: -3px;
 		font-size: 18px;
 	}
+	#left_button4 {
+		left: 184px;
+		top: -3px;
+		font-size: 18px;
+	}
 	#left_button13 {
 		top: 182px;
 		left: -3px;
